# nicetomeetyou

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml
nba_news/: asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
news/: admin.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
news/management/commands/: scrape_news.py
news/migrations/: 0001_initial.py  0002_alter_news_author_alter_news_caption_and_more.py  0003_content_to_json_blocks.py
news/templates/news/: news_detail.html  news_list.html
news/tests/: __init__.py  test_consumers.py  test_scrape_news.py  test_views.py
nginx/: default.conf
