[project]
name = "nicetomeetyou"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "django>=6.0.3",
    "django-environ>=0.13.0",
    "djangorestframework>=3.16.1",
    "psycopg[binary]>=3.3.3",
    "requests>=2.32.5",
]
